# chatbot-api

./: .dockerignore  .env.docker  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DOCKER_MIGRATION_SUMMARY.md  Dockerfile  MD_FILE_PURPOSES.md  README.md  cdk.json  deploy.sh  docker-compose.yml  k8s-health-check.yaml  lambda_handler.py  pyproject.toml  requirements-api-only.txt  requirements.txt  run_server.py  test_api.py  test_google_adapter.py
.github/workflows/: deploy.yml
infrastructure/: app.py  cdk.json  chatbot_stack.py  requirements.txt
infrastructure/config/: dev.yaml  prod.yaml
lambdas/auth/: create_auth.py  define_auth.py  requirements.txt  utils.py  verify_auth.py
scripts/: build-docker.sh  build-layers.sh  setup-secrets.sh
src/: __init__.py
src/api/: __init__.py  main.py  models.py
src/api/routes/: auth.py  chat.py  health.py
src/auth/: __init__.py  auth0_client.py  cognito_client.py  middleware.py  models.py  user_manager.py
src/config/: models.py  secrets.py  settings.py
src/models/: __init__.py  adapter_factory.py  base.py  google_adapter.py  openai_adapter.py
src/utils/: __init__.py
src/web/: __init__.py
